# serializer version: 1
# name: test_entities[binary_sensor.test_device_recording-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_device_recording',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Recording',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:record-rec',
    'original_name': 'Recording',
    'platform': 'webex_ce',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'recording',
    'unique_id': 'FOC2341P2G6_recording',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.test_device_recording-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'duration': None,
      'friendly_name': 'Test Device Recording',
      'icon': 'mdi:record-rec',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_device_recording',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.test_device_streaming-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_device_streaming',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Streaming',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:access-point-network',
    'original_name': 'Streaming',
    'platform': 'webex_ce',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'streaming',
    'unique_id': 'FOC2341P2G6_streaming',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.test_device_streaming-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'duration': None,
      'friendly_name': 'Test Device Streaming',
      'icon': 'mdi:access-point-network',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_device_streaming',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
